--- a/src/template/index.html
+++ b/src/template/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Test</title>
+    <title>Plazkat</title>
     <meta name="description" content="" />
 
     @@include("base/favicon.html",{})
