--- a/src/scss/modules/btn/_btn.scss
+++ b/src/scss/modules/btn/_btn.scss
@@ -1,13 +1,13 @@
-$btn-bg: #000;
-$btn-bg-hover: #585858;
+$btn-bg: $green;
+// $btn-bg-hover: #585858;
 $btn-color: #fff;
-$btn-color-hover: #fff;
+// $btn-color-hover: #fff;
 $btn-color-outline: currentColor;
 
 .btn {
-    position: relative;
-    text-decoration: none;
-    transition-duration: $td;
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent; 
+  position: relative;
+  text-decoration: none;
+  transition-duration: $td;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
