--- a/src/scss/config/_theme.scss
+++ b/src/scss/config/_theme.scss
@@ -1,9 +1,9 @@
-$color-primary:#000;
-$color-primary-hover:#444444;
-$color-primary-active:#5f2f2f;
-//$color-secondary:;
-//$color-secondary-hover:;
-//$color-secondary-active:;
-//$color-black:;
-//$color-grey:;
-//$color-white:;
+$color-primary: #000;
+// $color-primary-hover:#444444;
+// $color-primary-active:#5f2f2f;
+$green: #00994d;
+$blue: #00739e;
+$white: #ffffff;
+$grey: #646464;
+$grey-dark: #212121;
+$grey-light: #dedede;
