--- a/src/scss/modules/btn/_btn-link.scss
+++ b/src/scss/modules/btn/_btn-link.scss
@@ -13,10 +13,14 @@
   }
   @media (pointer: fine) {
     &:hover {
-      // background: $btn-bg-hover;
+      background: $green;
+      color: $white;
+      border: 1px solid $white;
     }
   }
   &:active {
-    // background: $btn-bg-hover;
+    background: $green;
+    color: $white;
+    border: 1px solid $white;
   }
 }
