--- a/src/scss/modules/btn/_btn-primary.scss
+++ b/src/scss/modules/btn/_btn-primary.scss
@@ -12,10 +12,12 @@
   }
   @media (pointer: fine) {
     &:hover {
-      // background: $btn-bg-hover;
+      background: $white;
+      color: $green;
     }
   }
   &:active {
-    // background: $btn-bg-hover;
+    background: $white;
+    color: $green;
   }
 }
