--- a/src/scss/modules/btn/_btn-primary.scss
+++ b/src/scss/modules/btn/_btn-primary.scss
@@ -14,10 +14,12 @@
     &:hover {
       background: $white;
       color: $green;
+      outline: 1px solid $green;
     }
   }
   &:active {
     background: $white;
     color: $green;
+    outline: 1px solid $green;
   }
 }
