--- a/src/scss/modules/btn/_btn-link.scss
+++ b/src/scss/modules/btn/_btn-link.scss
@@ -15,12 +15,12 @@
     &:hover {
       background: $green;
       color: $white;
-      border: 1px solid $white;
+      outline: 1px solid $white;
     }
   }
   &:active {
     background: $green;
     color: $white;
-    border: 1px solid $white;
+    outline: 1px solid $white;
   }
 }
