--- a/src/scss/modules/typography/_title.scss
+++ b/src/scss/modules/typography/_title.scss
@@ -17,6 +17,7 @@
   &--size {
     &-sm {
       font-size: size(20);
+      font-weight: 400;
       line-height: auto;
       @include media(lg) {
         font-size: size(25);
@@ -25,6 +26,8 @@
     &-md {
       font-size: size(24);
       line-height: 1.4;
+      font-weight: 400;
+
       @include media(lg) {
         font-size: size(40);
       }
