--- a/src/scss/template/base/_header.scss
+++ b/src/scss/template/base/_header.scss
@@ -221,10 +221,11 @@
 
   @media (max-width: 1024px) {
     .header_nav--mobile {
-      display: block;
+      z-index: 10;
       position: absolute;
       top: 0;
       left: 0;
+      display: block;
       width: 100%;
       height: 100vh;
       padding: size(15);
@@ -409,12 +410,14 @@
     }
     &__title {
       position: relative;
-      &::before {
-        position: absolute;
-        left: size(-65);
-        top: size(-63);
-        display: block;
-        content: url(../images/global/border.png);
+      @include media(lg) {
+        &::before {
+          position: absolute;
+          left: size(-65);
+          top: size(-63);
+          display: block;
+          content: url(../images/global/border.png);
+        }
       }
     }
     &__text {
