--- a/src/scss/components/form/_form-field.scss
+++ b/src/scss/components/form/_form-field.scss
@@ -1,101 +1,104 @@
 .form-field {
-    --dp-block: block;
-    display: var(--dp-block);
-    position: relative;
-    width: 100%;
-    font-size: size(18);
-    border: 1px solid $color-primary;
-    @media (pointer: fine) {
-        &:hover {
-            color: #000;
-        }
-        &:active {
-            color: #000;
-        }
+  --dp-block: block;
+  display: var(--dp-block);
+  position: relative;
+  width: 100%;
+  font-size: size(14);
+  color: $grey;
+  text-transform: uppercase;
+  // border: 1px solid $color-primary;
+  @media (pointer: fine) {
+    &:hover {
+      color: $grey;
     }
     &:active {
-        color: #000;
+      color: $grey;
     }
-    //*
-    &__input {
-        color: currentColor;
-        width: 100%;
-        display: block;
-        &::placeholder {
-            opacity: 0;
-        }
-        &:focus,
-        &:not(:placeholder-shown) {
-            & ~ .form-field__text {
-                opacity: 0;
-            }
-        }
-        &:-webkit-autofill {
-            -webkit-text-fill-color: currentColor;
-            transition: background-color 500000s ease-in-out 0s;
-        }
+  }
+  &:active {
+    color: $grey;
+  }
+  //*
+  &__input {
+    color: currentColor;
+    width: 100%;
+    display: block;
+    border-radius: 4px;
+    &::placeholder {
+      opacity: 0;
     }
-    //*
-    &__email,
-    &__number,
-    &__input,
-    &__required,
-    &__text {
-        font-size: 1em;
-        transition-duration: $td;
-        padding: size(25) size(40);
+    // &:focus,
+    // &:not(:placeholder-shown) {
+    //   & ~ .form-field__text {
+    //     opacity: 0;
+    //   }
+    // }
+    &:-webkit-autofill {
+      -webkit-text-fill-color: currentColor;
+      transition: background-color 500000s ease-in-out 0s;
     }
-    //*
-    &__email,
-    &__number,
-    &__required,
-    &__text {
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        pointer-events: none;
+  }
+  //*
+  &__email,
+  &__number,
+  &__input,
+  &__required,
+  &__text {
+    font-size: 1em;
+    transition-duration: $td;
+    padding: size(20) size(40);
+  }
+  //*
+  &__email,
+  &__number,
+  &__required,
+  &__text {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+  }
+  &__text {
+    color: currentColor;
+    span {
+      color: red;
     }
-    &__text {
-        color: currentColor;
-        span {
-            color: red;
-        }
+  }
+  &__email,
+  &__number,
+  &__required {
+    color: red;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    opacity: 0;
+  }
+  //* Mod invalid (class js)
+  // text/tel/password
+  //   &._required:not(._number) {
+  //     & > * {
+  //       opacity: 0;
+  //     }
+  //     .form-field__required {
+  //       opacity: 1;
+  //     }
+  //   }
+  &._email {
+    & > * {
+      opacity: 0;
     }
-    &__email,
-    &__number,
-    &__required {
-        color: red;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        opacity: 0;
+    .form-field__email {
+      opacity: 1;
     }
-    //* Mod invalid (class js)
-    // text/tel/password
-    &._required:not(._number) {
-        &>* {
-            opacity: 0;
-        }
-        .form-field__required {
-            opacity: 1;
-        }
+  }
+  &._number {
+    & > * {
+      opacity: 0;
     }
-    &._email {
-        &>* {
-            opacity: 0;
-        }
-        .form-field__email {
-            opacity: 1;
-        }
+    .form-field__number {
+      opacity: 1;
     }
-    &._number {
-        &>* {
-            opacity: 0;
-        }
-        .form-field__number {
-            opacity: 1;
-        }
-    }
+  }
 }
