--- a/src/scss/components/form/checkbox/_form-checkbox.scss
+++ b/src/scss/components/form/checkbox/_form-checkbox.scss
@@ -1,4 +1,4 @@
-$checkbox-color:#000; 
+$checkbox-color: $grey-light;
 /*
 <span class="form-checkbox">
     <input class="form-checkbox__input" type="checkbox">
@@ -7,60 +7,67 @@ $checkbox-color:#000;
 </span>
  */
 .form-checkbox {
-    position: relative;
-    display: inline-flex;
-    flex: 0 0 auto;
-    font-size: size(28);  
-    align-items: center;
-    justify-content: center;   
-    &__input {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        z-index: 2;
-        cursor: pointer;
-        &:checked ~ .form-checkbox__decor {
-            border-color: $checkbox-color;
-            --checkbox-decor-size:1;
-        }
-        &:checked ~ .icon {
-            opacity: 1;
-        }
+  position: relative;
+  flex: 0 0 auto;
+  font-size: size(10);
+  @include media(lg) {
+    font-size: size(14);
+  }
+  //   align-items: flex-start;
+  //   justify-content: center;
+  text-transform: uppercase;
+  color: $grey;
+  &__input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+    cursor: pointer;
+    &:checked ~ .form-checkbox__decor {
+      border-color: $checkbox-color;
+      --checkbox-decor-size: 1;
     }
-    //
-    &__decor  {
-        position: relative;
-        height: 1em;
-        width: 1em;     
-        border: 1px solid $checkbox-color;
-        --checkbox-decor-size: 0;
-        &:before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transition-duration: $td;
-            height:  0.714em;
-            width:  0.714em;
-            transform: translate3d(-50%, -50%, 0) scale(var(--checkbox-decor-size));
-            background-color: $checkbox-color;
-        }
+    &:checked ~ .icon {
+      opacity: 1;
     }
-    //
-    &--icon {
-        border: 1px solid $checkbox-color;
-        color: $checkbox-color;
-        height:  1em;
-        width: 1em;  
-        .icon {
-            position: absolute;
-            opacity: 0;
-            font-size: 0.6em;
-            margin-top: 0.05em;
-            transition-timing-function: linear;
-        }
+  }
+  //
+  &__decor {
+    position: absolute;
+    width: size(20);
+    height: size(20);
+    background-color: $white;
+    border-radius: size(4);
+    // border: 1px solid $checkbox-color;
+    --checkbox-decor-size: 0;
+    &:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      border-radius: size(4);
+      transition-duration: $td;
+      height: 0.9em;
+      width: 0.9em;
+      transform: translate3d(-50%, -50%, 0) scale(var(--checkbox-decor-size));
+      background-color: $checkbox-color;
     }
+  }
+  //
+  &--icon {
+    border: 1px solid $checkbox-color;
+    color: $checkbox-color;
+    height: 1em;
+    width: 1em;
+    .icon {
+      position: absolute;
+      opacity: 0;
+      font-size: 0.6em;
+      margin-top: 0.05em;
+      transition-timing-function: linear;
+    }
+  }
 }
