--- a/src/template/base/favicon.html
+++ b/src/template/base/favicon.html
@@ -1,2 +1,3 @@
 <link rel="icon" type="image/png" href="favicon/favicon.png" />
-<link rel="icon" href="favicon/favicon.svg" />
+<!-- <link rel="icon" href="favicon/favicon.svg" /> -->
+<link rel="icon" href="../images/global/logo.svg" />
