--- a/src/scss/template/section/_application.scss
+++ b/src/scss/template/section/_application.scss
@@ -58,6 +58,7 @@
         margin-top: 0;
       }
       .form-field {
+        font-weight: 600;
         &__input {
           margin: size(8) 0 size(20);
           background-color: $white;
@@ -79,8 +80,8 @@
         a {
           position: relative;
           z-index: 5;
-
-          color: $green;
+          font-weight: 600;
+          color: rgba($color: $green, $alpha: 0.7);
         }
       }
       .form-send__btn {
