--- a/src/template/section/news.html
+++ b/src/template/section/news.html
@@ -1,5 +1,57 @@
 <section id="news" class="news">
-    <div class="container">
-        <h2 class="news__title title title--size-"></h2>
+  <div class="container">
+    <h2 class="news__title title title--size-md">
+      Новости и полезные материалы
+    </h2>
+    <div class="news__content grid">
+      <div class="news__content-card col-4@lg">
+        <img src="images/news/news-1.jpg" alt="" />
+        <p class="news__content-card__subtitle text__size-lg">
+          Пилотные испытания в цехе плавки алюминия
+        </p>
+        <p class="news__content-card__text">
+          Цель пилотных испытаний - это определение возможности использования
+          технологий компании ООО «ПЛАЗКАТ» для очистки газовоздушной смеси от
+          бензапирена.
+        </p>
+        <div class="news__content-card__info box">
+          <span class="news__content-card__info-date">24 февраля 2021</span>
+          <a class="news__content-card__info-link" href="#">Читать подробнее</a>
+        </div>
+      </div>
+      <div class="news__content-card col-4@lg">
+        <img src="images/news/news-2.jpg" alt="" />
+        <p class="news__content-card__subtitle text__size-lg">
+          Пилотные испытания в цехе плавки алюминия
+        </p>
+        <p class="news__content-card__text">
+          Цель пилотных испытаний - это определение возможности использования
+          технологий компании ООО «ПЛАЗКАТ» для очистки газовоздушной смеси от
+          бензапирена.
+        </p>
+        <div class="news__content-card__info box">
+          <span class="news__content-card__info-date">24 февраля 2021</span>
+          <a class="news__content-card__info-link" href="#">Читать подробнее</a>
+        </div>
+      </div>
+      <div class="news__content-card col-4@lg">
+        <img src="images/news/news-3.jpg" alt="" />
+        <p class="news__content-card__subtitle text__size-lg">
+          Пилотные испытания в цехе плавки алюминия
+        </p>
+        <p class="news__content-card__text">
+          Цель пилотных испытаний - это определение возможности использования
+          технологий компании ООО «ПЛАЗКАТ» для очистки газовоздушной смеси от
+          бензапирена.
+        </p>
+        <div class="news__content-card__info box">
+          <span class="news__content-card__info-date">24 февраля 2021</span>
+          <a class="news__content-card__info-link" href="#">Читать подробнее</a>
+        </div>
+      </div>
+      <a class="btn btn--link btn--size-md" href="#"
+        >Все новости и публикации</a
+      >
     </div>
+  </div>
 </section>
