--- a/src/template/section/index.html
+++ b/src/template/section/index.html
@@ -3,3 +3,4 @@
 @@include("specialization.html",{}) 
 @@include("application.html",{}) 
 @@include("news.html",{}) 
+@@include("questions.html",{}) 
