--- a/src/template/section/questions.html
+++ b/src/template/section/questions.html
@@ -1,5 +1,96 @@
-<section id="questions" class="questions">
-    <div class="container">
-        <h2 class="questions__title title title--size-"></h2>
+<section id="question" class="question">
+  <div class="container">
+    <h2 class="question__title title title--size-md">Вопросы и ответы</h2>
+    <div class="question__wrapper">
+      <div class="questions">
+        <div class="questions-item">
+          <div class="questions-item__header">
+            <div class="questions-item__title">
+              Озон убирает запах? Или изменяет его путем смешивания с озоном?
+            </div>
+            <div class="questions-item__toggel _arrow">
+              <svg class="icon">
+                <use xlink:href="svg-sprite/sprite.svg#arrow"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="questions-item__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+            deleniti non mollitia placeat quod atque quaerat, quos tempora
+            adipisci nam, necessitatibus expedita deserunt ut unde iste?
+            Possimus, sunt non id perferendis suscipit sed, tempore ad eveniet
+            totam, quos qui ipsum sit assumenda fuga! Exercitationem eos fugit
+            necessitatibus sed debitis eveniet.
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="questions-item">
+          <div class="questions-item__header">
+            <div class="questions-item__title">
+              Эффективна система очистки Plazkat при утилизации ТБО?
+            </div>
+            <div class="questions-item__toggel _arrow">
+              <svg class="icon">
+                <use xlink:href="svg-sprite/sprite.svg#arrow"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="questions-item__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+            deleniti non mollitia placeat quod atque quaerat, quos tempora
+            adipisci nam, necessitatibus expedita deserunt ut unde iste?
+            Possimus, sunt non id perferendis suscipit sed, tempore ad eveniet
+            totam, quos qui ipsum sit assumenda fuga! Exercitationem eos fugit
+            necessitatibus sed debitis eveniet.
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="questions-item">
+          <div class="questions-item__header">
+            <div class="questions-item__title">
+              Как очистить выброс от печей обжига?
+            </div>
+            <div class="questions-item__toggel _arrow">
+              <svg class="icon">
+                <use xlink:href="svg-sprite/sprite.svg#arrow"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="questions-item__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+            deleniti non mollitia placeat quod atque quaerat, quos tempora
+            adipisci nam, necessitatibus expedita deserunt ut unde iste?
+            Possimus, sunt non id perferendis suscipit sed, tempore ad eveniet
+            totam, quos qui ipsum sit assumenda fuga! Exercitationem eos fugit
+            necessitatibus sed debitis eveniet.
+          </div>
+        </div>
+      </div>
+      <div class="questions">
+        <div class="questions-item">
+          <div class="questions-item__header">
+            <div class="questions-item__title">
+              Какой необходимый перечень работ при техническом обслуживании
+              установок Plazkat?
+            </div>
+            <div class="questions-item__toggel _arrow">
+              <svg class="icon">
+                <use xlink:href="svg-sprite/sprite.svg#arrow"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="questions-item__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+            deleniti non mollitia placeat quod atque quaerat, quos tempora
+            adipisci nam, necessitatibus expedita deserunt ut unde iste?
+            Possimus, sunt non id perferendis suscipit sed, tempore ad eveniet
+            totam, quos qui ipsum sit assumenda fuga! Exercitationem eos fugit
+            necessitatibus sed debitis eveniet.
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
