--- a/src/scss/components/questions/_questions.scss
+++ b/src/scss/components/questions/_questions.scss
@@ -11,79 +11,82 @@
 */
 //*
 .questions {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+
+  //*
+  &-item {
+    margin-bottom: size(20);
+
     //*
-    &-item {
-        margin-bottom: size(25);
-        //*
-        &__header {
-            //min-height: size(110);
-            background-color: rgb(241, 241, 241);
-            padding: size(20);
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            @include media(lg) {
-                padding: size(20) size(65);
-            }
-            &._active .questions-item__toggel{
-                //color: rgb(255, 117, 117);
-                &._plus {
-                    &:after {
-                        transform: rotate(-45deg);
-                    }
-                    &:before {
-                        transform: rotate(45deg);
-                    }
-                }
-                &._arrow .icon{
-                    transform: rotate(-90deg);
-                }
-            }
+    &__header {
+      padding: size(10) size(15);
+      padding-right: size(20);
+      @include media(md) {
+        font-size: size(18);
+
+        padding: size(27) size(30);
+        padding-right: size(40);
+      }
+      display: flex;
+      align-items: center;
+      background-color: rgba($color: $grey-light, $alpha: 0.4);
+      cursor: pointer;
+      &._active .questions-item__toggel {
+        // &._plus {
+        //   &:after {
+        //     transform: rotate(-45deg);
+        //   }
+        //   &:before {
+        //     transform: rotate(45deg);
+        //   }
+        // }
+        &._arrow .icon {
+          transform: rotate(-180deg);
         }
-        //*
-        &__title {
-            margin-right: size(25);
-        }
-        //*
-        &__toggel {
-            margin-left: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            &._plus {
-                height: 1em;
-                width: 1em;
-                font-size: size(25);
-                position: relative;
-                color: #A6A673;
-                flex: 0 0 auto;
-                &:before,
-                &:after {
-                    content: '';
-                    position: absolute;
-                    height: 2px;
-                    width: 100%;
-                    background: currentColor;
-                    transition-duration: $td;
-                }
-                &:after {
-                    transform: rotate(90deg);
-                }
-            }
-            &._arrow .icon{
-                transform: rotate(90deg);
-            }
-        }
-        //* text
-        &__body {
-            display: none;
-            padding: size(20);
-            @include media(lg) {
-                padding: size(20) size(65);
-            }
-        }
+      }
     }
-    
+    //*
+    // &__title {
+    //   margin-right: size(25);
+    // }
+    //*
+    &__toggel {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      //   &._plus {
+      //     height: 1em;
+      //     width: 1em;
+      //     font-size: size(25);
+      //     position: relative;
+      //     color: #a6a673;
+      //     flex: 0 0 auto;
+      //     &:before,
+      //     &:after {
+      //       content: "";
+      //       position: absolute;
+      //       height: 2px;
+      //       width: 100%;
+      //       background: currentColor;
+      //       transition-duration: $td;
+      //     }
+      //     &:after {
+      //       transform: rotate(90deg);
+      //     }
+      //   }
+      &._arrow .icon {
+        transform: rotate(0deg);
+      }
+    }
+    //* text
+    &__body {
+      display: none;
+      padding: size(20);
+      @include media(lg) {
+        padding: size(20) size(65);
+      }
+    }
+  }
 }
