--- a/src/scss/template/section/_questions.scss
+++ b/src/scss/template/section/_questions.scss
@@ -1,5 +1,8 @@
-.questions { 
-    position: relative;   
-    border-top: 1px solid red;
-    min-height: 100vh;
+.question {
+  &__wrapper {
+    margin-top: size(30);
+    @include media(lg) {
+      margin-top: size(40);
+    }
+  }
 }
